--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.5.1",
     "react-paginate": "^8.3.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
@@ -35,7 +34,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.11",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
   }
